--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=security
 # DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5433/taxe
+spring.datasource.url=jdbc:postgresql://localhost:5432/taxe
 spring.datasource.username=postgres
-spring.datasource.password=taxe1234
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA properties
@@ -10,3 +10,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.security.web.csrf = DEBUG
