--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=security
 # DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5433/taxe
+spring.datasource.url=jdbc:postgresql://localhost:5432/taxe
 spring.datasource.username=postgres
-spring.datasource.password=taxe1234
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA properties
