--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,24 @@
 spring.application.name=security
-# DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5433/taxe
-spring.datasource.username=postgres
-spring.datasource.password=taxe1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+# utf8
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
-# JPA properties
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# # DataSource
+# spring.datasource.url=jdbc:postgresql://localhost:5433/taxe
+# spring.datasource.username=postgres
+# spring.datasource.password=taxe1234
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+# # JPA properties
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/taxe
+spring.datasource.username=root
+spring.datasource.password=midikizi
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+
 logging.level.org.springframework.security.web.csrf = DEBUG
